# logister-python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  release-from-main.yml  release.yml
config/: release.yml
src/logister/: __init__.py  celery.py  client.py  django.py  fastapi.py  flask.py  logging.py
tests/: test_client.py
